# reflection

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CHANGELOG_v2.2.0.md  CHANGELOG_v2.3.0.md  CHANGELOG_v2.3.1.md  CHANGELOG_v2.4.0.md  CHANGELOG_v2.4.1.md  CHANGELOG_v2.5.0.md  CHANGELOG_v2.5.1.md  CHANGELOG_v2.5.2.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260202_000000_001_initial_schema.py  20260202_000001_002_memories_table.py  20260202_000002_003_session_history.py  20260203_000000_004_api_key_composite_index.py
examples/: hybrid_routing_example.py  quickstart.py
installer/: README.txt  build_installer.py  cli_installer.py  installer.spec  setup_wizard.py
papers/: reflection_security_paper.md
reflection/: __init__.py  __main__.py  _familiar_setup.py  cli.py
reflection/auth/: __init__.py  sso.py
reflection/core/: __init__.py  agent.py  async_base.py  async_orchestrator.py  circuit_breaker.py  enterprise_tools.py  executor.py  extended_tools.py  memory.py  orchestrator.py  providers.py  providers_async.py  regions.py  settings.py  tokens.py  tools.py  usage_alerts.py  usage_calculator.py
reflection/data/: __init__.py  models.py  postgres.py  redis.py  repositories.py
reflection/gateway/: __init__.py  app.py  auth.py  auth_routes.py  chat_routes.py  chat_routes_v2.py  health.py  job_routes.py  lifecycle_routes.py  quota_middleware.py  quota_routes.py  rate_limit.py  request_context.py  routes.py  sso_routes.py  token_store.py  versioning.py
reflection/jobs/: __init__.py  export_handlers.py
reflection/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
reflection/routing/: __init__.py  phi_detector.py  smart_router.py
reflection/services/: __init__.py  orchestrator.py
reflection/tenant_wrappers/: __init__.py  agent.py  channels.py  memory.py  tools.py
reflection/tenants/: __init__.py  context.py  lifecycle.py  models.py  quota_service.py  quotas.py
reflection_core/: __init__.py
reflection_core/exceptions/: __init__.py  hierarchy.py
reflection_core/security/: __init__.py  encryption.py  sanitization.py  trust.py
reflection_core/types/: __init__.py
scripts/: generate_secrets.py  model_setup.sh
tests/: conftest.py  test_constitution.py  test_installation.py  test_mcp_server.py  test_memory_agent.py  test_mesh_delegation.py  test_mesh_discovery.py  test_mesh_memory_bridge.py  test_mesh_trust.py  test_phi_routing.py  test_planner.py  test_reflection_core.py  test_self_correction.py  test_semantic_memory.py  test_skill_handlers.py  test_skill_loading.py  test_skill_presets.py  test_tenant_isolation.py  test_v2_integration.py
