[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflection"
version = "2.0.0"
description = "Enterprise Multi-Tenant AI Companion Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "George Scott Foley", email = "Georgescottfoley@proton.me" }
]
keywords = [
    "ai", "agent", "llm", "enterprise", "multi-tenant",
    "anthropic", "openai", "async"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Familiar core
    "familiar-agent>=1.4.0",

    # Async HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",

    # Redis
    "redis>=5.0.0",

    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # Security
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",

    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-asyncpg>=0.43b0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "anyio>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.27.0",
    "respx>=0.20.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "faker>=22.0.0",
]

[project.scripts]
reflection = "reflection.cli:app"

[project.urls]
Homepage = "https://familiar.ai"
Documentation = "https://docs.familiar.ai/reflection"
Repository = "https://github.com/omegcrash/reflection"

[tool.hatch.build.targets.wheel]
packages = ["reflection", "reflection_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line length handled by formatter
    "B008",   # Function call in default argument — standard FastAPI Depends() pattern
]

[tool.black]
line-length = 100
target-version = ["py311"]
